# mlir-python-bindings

./: CMakeLists.txt  PythonBindings.cpp  README.md
test/: base.py  test.py  test_block.mlir  test_block.py  test_input.mlir  test_input.py  test_module.py  test_operation.mlir  test_operation.py  test_region.mlir  test_region.py
